// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-noformat-pragma.json5 - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/** @noformat */

{hello:       "world"}

=====================================output=====================================
/** @noformat */

{ hello: "world" }

================================================================================
`;

exports[`with-noprettier-pragma.json5 - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/** @noprettier */

{hello:       "world"}

=====================================output=====================================
/** @noprettier */

{ hello: "world" }

================================================================================
`;
